objects/Builds__c.object
<CustomObject>
    <description>SW Builds related to a release</description>
    <fields>
        <fullName>Build_Details__c</fullName>
        <label>Build Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Build_Number__c</fullName>
        <inlineHelpText>format x.x.y.z_#####</inlineHelpText>
        <label>Build Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECO_Date__c</fullName>
        <inlineHelpText>input date of ECO</inlineHelpText>
        <label>ECO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EULA_Agreement__c</fullName>
        <formula>&apos;By downloading this software you agree to the terms of the EULA here: http://www.silver-peak.com/download/latest/EULA.html&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EULA Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Model__c</fullName>
        <label>ISO Model</label>
        <picklist>
            <picklistValues>
                <fullName>All VX/VRX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EdgeConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orchestrator (GMS)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to remove visibility in the Support Center Portal</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Silver Peak Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReleaseCode__c</fullName>
        <formula>if ( OR( ISPICKVAL(Release__r.Type__c , &apos;GMS&apos;), ISPICKVAL(Release__r.Type__c , &apos;GX-V Image&apos;)),  Build_Number__c  ,
LEFT( Build_Number__c ,(FIND(    &apos;_&apos;, Build_Number__c   , 1)-1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Releases__c</referenceTo>
        <relationshipLabel>Builds</relationshipLabel>
        <relationshipName>Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BETA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Build</label>
    <nameField>
        <label>Build Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Builds</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>